Fixed navbar not showing for bigger screens and wrong class to mobile links and pc links

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ nav{
   width: 20%;
   min-width: 400px;
   
+  
 }
 .nav-links a{
   text-decoration: none;
@@ -103,7 +104,7 @@ footer{
   background-color: #082032;
   height: 200px;
   z-index: 4;
-  transform: translateY(-200px);
+  transform: translateY(-250px);
   transition: all 0.3s;
   border: 1px solid #051520;
 
@@ -132,7 +133,7 @@ footer{
   z-index: 5
 }
 .activateMenu{
-  transform: translateY(50px);
+  transform: translateY(0px);
 }
 
 
